--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@
 *~
 /auto-save-list/
 /anaconda-mode/
+/.cache/
+/.lsp-session-v1
+/eln-cache/
+/history
+/idris-mode/
+/idris2-mode/
+/lean4-mode/
+/libera-password
